# disksy

./: README.md
Source/Backend/Services/DisksyAnalyzerService/: Cargo.toml
Source/Backend/Services/DisksyAnalyzerService/src/: disk_info.rs  main.rs  walker.rs
Source/Backend/Services/DisksyAnalyzerService/src/controllers/: directory_controller.rs  disk_controller.rs  mod.rs
Source/Backend/Services/DisksyAnalyzerService/src/structs/: directory.rs  disk.rs  file.rs
Source/ClientApp/: package-lock.json  package.json
Source/ClientApp/src/: App.tsx
Source/ClientApp/src-tauri/: tauri.conf.json
Source/ClientApp/src/bindings/: directory.ts  disk.ts  events.ts  file.ts
Source/ClientApp/src/components/: ContextEventMenu.tsx  Directory.css  Directory.tsx  DiskInfo.tsx
