[package]
name = "DisksyAnalyzerService"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.24.6"
jwalk = "0.5"
mft = "0.6.0"
actix-web = "4"
actix-web-lab = "0.16.4"
actix-cors = "0.6.1"
actix-files = "*"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
env_logger = "0.9.0"